--- a/code/client/mixc_0.0.1/less/color.less
+++ b/code/client/mixc_0.0.1/less/color.less
@@ -15,7 +15,7 @@
 @light-color: rgb(245,245,245);
 
 // 砖红色
-@shop-bg-color: rgb(228,159, 156);
+@shop-bg-color: #ecb1ad;
 
 // 边框颜色
 @border-color: rgb(228,228,228);
@@ -38,7 +38,7 @@
 @activity-bg-color: rgb(210,196,198);
 
 // 锐影背景颜色
-@moive-bg-color: rgb(81,62,72);
+@moive-bg-color: #ecb1ad;
 
 // 锐影背景颜色
 @wheel-bg-color: rgb(203,44,88);
