--- a/code/client/mixc_0.0.1/less/home/nav.less
+++ b/code/client/mixc_0.0.1/less/home/nav.less
@@ -12,7 +12,7 @@ nav.home-nav {
     }
     
     .justify {
-        background-size: 8vw;
+        //background-size: 8vw;
     }
 
     .home-nav-item:first-child {
