--- a/code/client/mixc_0.0.1/less/public.less
+++ b/code/client/mixc_0.0.1/less/public.less
@@ -10,6 +10,7 @@ body {
     background-color: @bg-color;
     color: @font-color;
     box-sizing: border-box;
+    font-family: "微软雅黑";
 }
 
 ::-webkit-scrollbar {
@@ -51,6 +52,13 @@ h5 {
     font-size: 1.5vh;
     line-height: 4vh;
     height: 4vh;
+}
+
+.center(){
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 // 水平对齐
