--- a/code/client/mixc_0.0.1/less/swiper.less
+++ b/code/client/mixc_0.0.1/less/swiper.less
@@ -55,7 +55,7 @@
     position: relative;
     height: calc(~"29vh - 50px");
     overflow: hidden;
-    width: calc(~"100vw - 20vh - 20px");
+    width: 38.4375vh;
     
     .swiper-slide {
     }
