--- a/code/client/mixc_0.0.1/less/brand.less
+++ b/code/client/mixc_0.0.1/less/brand.less
@@ -2,7 +2,7 @@
     position: relative;
     
     a {
-        background-color: @achive-bg-color;
+        background-color: #dab274;
         display: block;
         vertical-align: middle;
         text-align: center;
@@ -10,29 +10,30 @@
     }
     
     a.active {
-        background-color: @achive-bg-active-color;
+        background-color: #f39801;
     }
-    
+    @cell-height: 14.625vh;
+    @left-width: 15.625vh;
+    @sub-left: 15.9vh;
+    @padding-left: 16.1458vh;
     .side {
         position: fixed;
-        width: 14vh;
-        top: 28.5vh;
+        width: @left-width;
+        top: 23.56vh;
         left: 10px;
         
         .top {
-            height: 14vh;
+            height: @left-width;
             background-color: @nav-block1;
             position: relative;
             
-            padding-top: 0.5vh;
-            
             a {
                 margin-top: 0.5vh;
-                padding-top: 0.3vh;
-                width: 6vh;
-                font-size: 1vh;
-                line-height: 1.5vh;
-                height: 1.5vh;
+                //padding-top: 0.3vh;
+                width: 6.25vh;
+                font-size: 1.1vh;
+                line-height: 2.24vh;
+                height: 2.24vh;
             }
             
             hr {
@@ -58,16 +59,18 @@
         
         .menus {
             a {
-                margin-top: 1vh;
-                height: 4vh;
-                line-height: 4vh;
-                font-size: 1.6vh;
+                margin-top: 0.5208vh;
+                height: 5.2vh;
+                line-height: 5.2vh;
+                font-size: 1.5vh;
+                letter-spacing: 8px;
             }
             &.letter {
                 a {
-                    width: 4vh;
+                    width: 4.6875vh;
+                    height: 4.6875vh;
                     float: left;
-                    margin-right: 1vh;
+                    margin-right: 0.78125vh;
                 }
                 
                 a:nth-child(3n) {
@@ -79,30 +82,34 @@
         
     .submenus {
         position: absolute;
-        left: calc(~"14vh + 10px");
-        width: 8vh;
+        left: @sub-left;
+        width: 9.375vh;
         z-index: 99;
         
         a {
-            height: 2vh;
-            line-height: 2vh;
-            font-size: 1vh;
+            height: 2.60416666666667vh;
+            line-height: 2.60416666666667vh;
+            font-size: 1.1vh;
             box-sizing: border-box;
-            border: solid 1px @border-color;
+            border:solid 1px rgba(255,255,255,0.95);
+            background-color:fade(@achive-bg-color, 95%);
         }
     }
     
     .content {
-        padding-left: calc(~"14vh + 20px");
-        height: 71.5vh;
+        padding-left: @padding-left;
+        height: 75.3vh;
         overflow: auto;
         
+        margin-top: 0.1212vh;
+        
         .table-view-cell {
-            margin-top: calc(~"2.5vh - 10px");
-            height: 14vh;
+            margin-top: 0.5208vh;
+            height: @cell-height;
             border: 1px solid @border-color;
             color: @gray-color;
             background-color: inherit;
+            box-sizing: border-box;
             
             .img {
                 .bgimg();
@@ -120,27 +127,34 @@
                 .icon {
                     .bgimg();
                     border-radius: 50%;
-                    height: 3.8vh;
-                    width: 3.8vh;
-                    margin: 1.9vh auto;
+                    height: 4.16667vh;
+                    width: 4.16667vh;
+                    margin: 1.5625vh auto;
                 }
                 
                 .name {
-                    font-size: 1.4vh;
+                    font-size: 1.5vh;
                     color: @font-color;
                     background-color: @black-color;
+                    display: inline-block;
+                    padding: 0.1vh 0.5vh 0.25vh 0.5vh;
                 }
                 
                 .desc {
-                    font-size: 1vh;
-                    padding-top: 0.2vh;
+                    font-size: 1.0vh;
+                    padding-top: 0.5vh;
                 }
                 
                 .floor {
-                    font-size: 1.2vh;
-                    padding-top: 0.8vh;
+                    font-size: 1.1vh;
+                    padding-top: 0.5vh;
                 }
             }
+        }
+        
+        .table-view-cell:first-child {
+            margin-top: 0;
+            
         }
     }
 }
