--- a/code/client/mixc_0.0.1/less/shop.less
+++ b/code/client/mixc_0.0.1/less/shop.less
@@ -1,8 +1,8 @@
 // 商铺详情
 .shop {
     position: relative;
-    @w: 22vh;
-    @h: 26vh;
+    @w: 25vh;
+    @h: 25vh;
     
     .img {
         .bgimg();
@@ -21,11 +21,27 @@
         box-sizing: border-box;
         
        .icon {
-            .bgimg();
             border-radius: 50%;
-            height: 3.8vh;
-            width: 3.8vh;
+            height: 5.98958333333333vh;
+            width: 5.98958333333333vh;
             margin: 0 auto 1.9vh auto;
+            position: relative;
+            
+            .icon-img {
+                .center();
+                .bgimg();
+                height: 4.16667vh;
+                width: 4.16667vh;
+            }
+        }
+        
+        .qr-img {
+            .bgimg();
+            width: 6.25vh;
+            height: 6.25vh;
+            right: 0.78vh;
+            top: 10.41666666666667vh;
+            position: absolute;
         }
         
         hr {
@@ -35,20 +51,25 @@
         }
         
         .name {
-            font-size: 1vh;
+            font-size: 1.1vh;
+            display: block;
+            margin-top: 1vh;
+            padding-left: 10px;
             .red {
                 color: @red-color;
             }
         }
         
         .desc {
-            font-size: 1vh;
-            padding-top: 1.5vh;
+            padding-left: 10px;
+            font-size: 1.1vh;
+            padding-top: 1.1vh;
         }
         
         .floor {
-            font-size: 1vh;
-            padding-top: 1.5vh;
+            padding-left: 10px;
+            font-size: 1.1vh;
+            padding-top: 1.1vh;
         }
         
         .back {
@@ -58,15 +79,16 @@
             background-color: @shop-bg-color;
             right: 0;
             bottom:0;
-            width: 9vh;
-            height: 6vh;
-            line-height: 6vh;
+            width: 7.8125vh;
+            height: 5.72916666666667vh;
+            line-height: 5.72916666666667vh;
             
             text-align: center;
-            font-size: 1vh;
+            font-size: 1.1vh;
             
             .iconfont {
-                font-size: 1vh;
+                font-size: 2.5vh;
+                vertical-align: sub;
             }
         }
     }
@@ -82,13 +104,17 @@
             box-sizing: border-box;
             padding: 0;
             margin: 0;
-            height: 5vh;
-            line-height: 5vh;
-            font-size: 2vh;
+            height: 3vh;
+            line-height: 3vh;
+            font-size: 1.5vh;
         }
         
         p {
+            text-indent: 2em;
+            line-height: 2vh;
             font-size: 1vh;
+            padding:0;
+            margin:0;
         }
     }
     
