--- a/code/client/mixc_0.0.1/less/top-header.less
+++ b/code/client/mixc_0.0.1/less/top-header.less
@@ -1,21 +1,21 @@
 .top-header {
     display: block;
     position: relative;
-    height: 26vh;
+    height: 22.92vh;
     overflow: hidden;
     color: @font-color;
     
-    @h1: 14vh;
-    @h2: 7.5vh;
-    @h3: 4.5vh;
+    @h1: 12.4vh;
+    @h2: 6.0vh;
+    @h3: 3.97vh;
     
-    @w1: 47vw;
+    @w1: calc(~"53.5vw - 20px");
     @w2: 28.2vw;
-    @w3: calc(~"25vw - 20px");
+    @w3: 18.5vw;
     
-    @w1-2: 75vw;
-    @h1-2: 21.5vh;
-    @h2-3: 12vh;
+    @w1-2: calc(~"81.5vw - 20px");
+    @h1-2: 18.4vh;
+    @h2-3: 8.57vh;
     
     .block1 {
         position: absolute;
@@ -73,8 +73,8 @@
     }
     
     .block6>* {
-        padding-right: 10px;
-        font-size: 1.5vh;
+        padding-right: 20px;
+        font-size: 1.4vh;
     }
     
     .block7 {
@@ -85,40 +85,41 @@
         height: @h2-3;
         width: @w3; 
         background-color: @nav-block7;
-        padding-top: 1.8vh;
+        padding-top: 1.4vh;
         
         .iconfont {
-            font-size: 5vh;
+            font-size: 4.5vh;
         }
         
         .title {
-            font-size: 1vh;
-            padding-top: 0.5vh;
+            font-size: 1.1vh;
+            padding-top: 0.2vh;
         }
     }
     
     .block8 {
         position: absolute;
         right: @w3;
-        bottom: @h2-3;
+        top: 3vh;
         text-align: right;
+        padding-right: 1vw;
         
         .h() {
             padding: 0;
             margin: 0;
-            padding: 10px;
+            font-weight: normal;
         }
         
         
         h1 {
             .h();
-            font-size: 3.2vh;
+            font-size: 2.9vh;
         }
         
         h2 {
             .h();
-            font-size: 2.4vh;
-            padding-bottom: 1vh;
+            font-size: 2.0vh;
+            padding-bottom: 0.5vh;
         }
     }
     
@@ -142,7 +143,7 @@
         
         .iconfont {
             color: rgba(255,255,255, 0.5);
-            font-size: 2.4vh;
+            font-size: 2.8vh;
         }
     }
 }
