--- a/code/client/mixc_0.0.1/less/model.less
+++ b/code/client/mixc_0.0.1/less/model.less
@@ -8,6 +8,8 @@
   background-color: rgba(0, 0, 0, .5);
   display: table;
   transition: opacity .3s ease;
+  color: #333;
+  font-size: 14px;
 }
 
 .modal-wrapper {
