--- a/code/h5/src/assets/less/size.less
+++ b/code/h5/src/assets/less/size.less
@@ -35,7 +35,10 @@
 @public_header_col3: 18.5vw;
 
 // 楼层导购
-@floor_map_height: 36.97916666666667vh;// 导航图高度
+@floor_lenged_height: 6vh;
+@floor_lenged_item_height: 4.5vh;
+@floor_lenged_item_width: 4.5vh;
+@floor_map_height: 25.36vh;// 导航图高度
 @floor_nav_height: 5.21vh;// 楼层列表高度
 @floor_info_height: 100vh - @public_header_height - 2 * @normal_pading - @floor_map_height - @floor_nav_height - 3 * @page_padding-v;
 @floor_info_width: 29.90740740740741vw;
