--- a/code/web/src/assets/less/main.less
+++ b/code/web/src/assets/less/main.less
@@ -47,3 +47,10 @@ body {
     font-size: 11px;
     color: #666;
 }
+
+.el-table__body tr td > .cell {
+    padding: 0;
+    text-align: center;
+    white-space: nowrap;
+    word-break: keep-all;
+}
