--- a/code/h5/src/assets/iconfont/iconfont.css
+++ b/code/h5/src/assets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1492927867365'); /* IE9*/
-  src: url('iconfont.eot?t=1492927867365#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1492927867365') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1492927867365') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1492927867365#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1493127272001'); /* IE9*/
+  src: url('iconfont.eot?t=1493127272001#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1493127272001') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1493127272001') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1493127272001#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -33,6 +33,8 @@
 
 .icon-baobao:before { content: "\e605"; }
 
+.icon-lift:before { content: "\e922"; }
+
 .icon-kuzi:before { content: "\e64f"; }
 
 .icon-underwear:before { content: "\e616"; }
@@ -42,6 +44,8 @@
 .icon-yanjing:before { content: "\e66f"; }
 
 .icon-qunzi:before { content: "\e621"; }
+
+.icon-stail:before { content: "\e63d"; }
 
 .icon-tshirt:before { content: "\e6e0"; }
 
