--- a/code/h5/src/assets/less/main.less
+++ b/code/h5/src/assets/less/main.less
@@ -117,6 +117,10 @@ body {
     .form-input:focus{
          border-color:rgb(0, 120, 215);
     }
+    
+    .form-input[readonly] {
+        background-color: #e0e0e0;
+    }
 }
 
 // 点击缩小动画
