--- a/code/h5/src/assets/less/public/modal.less
+++ b/code/h5/src/assets/less/public/modal.less
@@ -46,7 +46,8 @@
 }
 
 .modal-default-button {
-  float: right;
+    margin-left: 10px;
+    float: right;
     width: 120px;
     height: 30px;
     background-color: rgb(204,204,204);
