--- a/code/h5/src/assets/less/shop/index.less
+++ b/code/h5/src/assets/less/shop/index.less
@@ -117,11 +117,14 @@
         }
         
         p {
-            text-indent: 2em;
             line-height: 2vh;
             font-size: 1vh;
             padding:0;
             margin:0;
+            pre {
+                white-space: pre-wrap;
+                margin:0;
+            }
         }
     }
     
