--- a/code/h5/src/assets/less/brand/index.less
+++ b/code/h5/src/assets/less/brand/index.less
@@ -150,7 +150,7 @@
                     padding-top: 0.5vh;
                 }
                 
-                .floor {
+                .info-floor {
                     font-size: 1.1vh;
                     padding-top: 0.5vh;
                 }
