--- a/code/h5/src/assets/less/shop/index.less
+++ b/code/h5/src/assets/less/shop/index.less
@@ -70,7 +70,7 @@
             padding-top: 1.1vh;
         }
         
-        .floor {
+        .info-floor {
             padding-left: @page_padding-h;
             font-size: 1.1vh;
             padding-top: 1.1vh;
