--- a/code/h5/src/assets/iconfont/iconfont.css
+++ b/code/h5/src/assets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1493127272001'); /* IE9*/
-  src: url('iconfont.eot?t=1493127272001#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1493127272001') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1493127272001') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1493127272001#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1493605664974'); /* IE9*/
+  src: url('iconfont.eot?t=1493605664974#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1493605664974') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1493605664974') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1493605664974#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -32,6 +32,8 @@
 .icon-next:before { content: "\e603"; }
 
 .icon-baobao:before { content: "\e605"; }
+
+.icon-wc:before { content: "\e64b"; }
 
 .icon-lift:before { content: "\e922"; }
 
