修复 楼层导航BUG

--- a/code/h5/src/assets/css/app.css
+++ b/code/h5/src/assets/css/app.css
@@ -438,6 +438,9 @@ nav.index-nav .index-nav-item:first-child {
 .floor .floors .iconfont {
   font-size: 2vh;
 }
+.floor .floors .col {
+  width: 11.203703703703702vw;
+}
 .floor .floors,
 .floor .floors .row,
 .floor .floors col {
