--- a/code/h5/src/assets/less/floor/index.less
+++ b/code/h5/src/assets/less/floor/index.less
@@ -84,6 +84,10 @@
             font-size: 2vh;
         }
         
+        .col {
+            width: 11.203703703703702vw;
+        }
+        
         &, .row, col {
             font-style: italic;
             cursor: pointer;
