--- a/code/h5/src/assets/css/app.css
+++ b/code/h5/src/assets/css/app.css
@@ -787,6 +787,32 @@ nav.index-nav .index-nav-item:first-child {
   height: 100%;
   box-sizing: border-box;
 }
+.shop .map .location {
+  transition: all 0.2s ease-in-out;
+  transform-origin: bottom center;
+  position: absolute;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+  background-size: contain;
+  text-align: center;
+  width: 50px;
+  height: 50px;
+  padding-top: 8px;
+  z-index: 999;
+  background-image: url("../../../static/img/location.png");
+  display: block;
+  text-decoration: none;
+}
+.shop .map .location .shop-icon {
+  margin: auto;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
 .shop .swiper-container {
   margin-right: 44.44444444vw;
   height: 25vh;
